log
Sat 29 Mar 2025 07:55:55 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Sun 30 Mar 2025 02:37:09 AM UTC: 
 list.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:35:5: error: ‘l’ undeclared (first use in this function)
   35 |     l->tail = NULL;
      |     ^
list.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
25021aa
Sun 30 Mar 2025 02:37:18 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7722083
Sun 30 Mar 2025 02:37:58 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d0680af
Sun 30 Mar 2025 02:39:38 AM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:45:31: error: expected ‘;’ before ‘return’
   45 |     list->current = list->head // apunta al primer elem
      |                               ^
      |                               ;
   46 |     return list-current;
      |     ~~~~~~                     
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
029f7e4
Sun 30 Mar 2025 02:39:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:46:17: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   46 |     return list-current;
      |                 ^~~~~~~
      |                 popCurrent
list.c:46:17: note: each undeclared identifier is reported only once for each function it appears in
list.c:47:1: error: control reaches end of non-void function [-Werror=return-type]
   47 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
820fa68
Sun 30 Mar 2025 02:40:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
7a3d597
Sun 30 Mar 2025 02:40:30 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
8828737
Sun 30 Mar 2025 02:41:24 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
c14ed93
Sun 30 Mar 2025 02:42:53 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  2|5
total_score: 15/70
37e9af6
Sun 30 Mar 2025 02:46:36 AM UTC: 
 list.c | 12 ++++++++----
 1 file changed, 8 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:55:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   55 |     return lista->current->data;
      |            ^~~~~
      |            list
list.c:55:12: note: each undeclared identifier is reported only once for each function it appears in
list.c:56:1: error: control reaches end of non-void function [-Werror=return-type]
   56 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
6c8b9e2
Sun 30 Mar 2025 02:52:31 AM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:56:12: error: ‘lista’ undeclared (first use in this function); did you mean ‘list’?
   56 |     return lista->current->data;
      |            ^~~~~
      |            list
list.c:56:12: note: each undeclared identifier is reported only once for each function it appears in
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
list.c: In function ‘nextList’:
list.c:57:1: error: control reaches end of non-void function [-Werror=return-type]
   57 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
e28d7b7
Sun 30 Mar 2025 02:52:50 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cee1451
Sun 30 Mar 2025 02:53:41 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:52:1: error: control reaches end of non-void function [-Werror=return-type]
   52 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7aefdaf
Sun 30 Mar 2025 02:55:02 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  0|0
cb3ec21
Sun 30 Mar 2025 02:57:04 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
714c71b
Sun 30 Mar 2025 02:57:49 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
ca1e53e
Sun 30 Mar 2025 02:58:03 AM UTC: 
 list.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  0|0
713f4b4
